package proto;

option java_package = "br.udesc.esag.participactbrasil.domain.proto";

option java_outer_classname = "DataAccelerometerClassifierProtos";

message DataAccelerometerClassifierProtoList {
    repeated DataAccelerometerClassifierProto list = 1;
}

message DataAccelerometerClassifierProto {
    required int64 sampleTime = 1;
    required string value = 2;
}
