package proto;

option java_package = "br.udesc.esag.participactbrasil.domain.proto";

option java_outer_classname = "DataGoogleActivityRecognitionProtos";

message DataGoogleActivityRecognitionProtoList {
    repeated DataGoogleActivityRecognitionProto list = 1;
}

message DataGoogleActivityRecognitionProto {
    required int64 sampleTime = 1;
    required string recognizedActivity = 2;
    required int32 confidence = 3;
}
