package proto;

option java_package = "br.udesc.esag.participactbrasil.domain.proto";

option java_outer_classname = "DataGyroscopeProtos";

message DataGyroscopeProtoList {
    repeated DataGyroscopeProto list = 1;
}

message DataGyroscopeProto {
    required int64 sampleTime = 1;
    required float rotation_x = 2;
    required float rotation_y = 3;
    required float rotation_z = 4;
}
